--- a/autocd/templates/admin/bs.html
+++ b/autocd/templates/admin/bs.html
@@ -26,7 +26,7 @@
       <button class="navbar-toggler navbar-toggler-right hidden-lg-up" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="/autocd">Salt AutoDeploy</a>
+      <a class="navbar-brand btn btn-outline-success" href="/autocd">SaltAutoDeploy <small>Beta1.0</small></a>
 
     <!---<button type="button" class="btn btn-primary">
   Notifications <span class="badge badge-danger">4</span>
@@ -65,7 +65,8 @@
         </ul>
         <form class="form-inline mt-2 mt-md-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search 
+          </button>
         </form>
       </div>
     </nav>
