--- a/autocd/templates/task_result.html
+++ b/autocd/templates/task_result.html
@@ -35,7 +35,7 @@
 		  <th>Minion</th>
 		  <th>Name</th>
 		  <th>Result</th>
-		  <th>Duration</th>
+		  <th>Duration(ms)</th>
 		</tr>
 	      </thead>
 	      <tbody>
@@ -47,9 +47,9 @@
 								<tr class="table-danger">
 							{% endif %}
 												<td> {{ tgt }} </td>
-												<td> {{ app }} </td>
 												<td> {{ app_value.name }} </td>
-												<td> {{ app_value.Duration }}</span> </td>
+												<td> {{ app_value.result }} </td>
+												<td> {{ app_value.duration }}</span> </td>
 							</tr>
 		    {% endfor %}
 		  {% endfor %}
@@ -89,13 +89,26 @@
 			</div>
 		</div>
 		<div class="col">
-			<div class="card card-body">
-				<div class="card-header"><H5 class="card-title">Output</h5></div>
-					{% if result.msg.out %}
-						<p> {{result.msg.out.0 }}</p>
-					{% else %}
-						<p>no outputs</p>
-					{% endif%}
+			<div class="card">
+
+					<div class="card-header" role="tab" id="headingOne">
+							<h5 class="mb-0">
+								<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Detail Output
+						</a>
+					</h5>
+				</div>
+				<!--<div class="card-header"><H5 class="card-title">Output</h5></div> -->
+				<div id="collapseOne" class="collapse hide" role="tabpanel" aria-labelledby="headingOne">
+					<div class="card-block">
+							{% if result.msg.out %}
+								<p> {{result.msg.out.0 }}</p>
+							{% else %}
+								<p>no outputs</p>
+							{% endif%}
+					</div>
+				</div>
+
+
 			</div>
 		</div>
 	</div>
